se ajustan los campos de tipo en cultura y lugares
