# models/Cultura.go
@@ -15,12 +15,13 @@ type Cultura struct {
 	NombreCultura       string    `orm:"column(Nombre_Cultura)"`
 	DescripcionCultural string    `orm:"column(Descripcion_Cultural);null"`
 	ImagenVideo         string    `orm:"column(Imagen_Video);type(text)"`
-	Tipo                string    `orm:"column(Tipo);null"`
 	Activo              bool      `orm:"column(Activo)"`
 	FechaCreacion       time.Time `orm:"column(Fecha_Creacion);type(timestamp with time zone);null;auto_now_add"`
 	FechaModificacion   time.Time `orm:"column(Fecha_Modificacion);type(timestamp with time zone);null;auto_now"`
 	FkCulturaUsuario    int       `orm:"column(Fk_Cultura_Usuario)"`
+	IdTipoCultura *TipoCultura `orm:"column(Id_Tipo_Cultura);rel(fk)"`
 }
+
 
 func (t *Cultura) TableName() string {
 	return "Cultura"
