# swagger/swagger.yml
@@ -1915,11 +1915,11 @@ definitions:
       Id:
         type: integer
         format: int64
+      IdTipoCultura:
+        $ref: '#/definitions/models.TipoCultura'
       ImagenVideo:
         type: string
       NombreCultura:
-        type: string
-      Tipo:
         type: string
   models.EstiloMusical:
     title: EstiloMusical
@@ -1989,6 +1989,8 @@ definitions:
       Id:
         type: integer
         format: int64
+      IdTipoLugares:
+        $ref: '#/definitions/models.TipoLugares'
       ImagenVideo:
         type: string
       NombreLugar:
